--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.4.RELEASE</version>
+		<version>2.2.6.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -18,54 +18,37 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 		<guava.version>15.0</guava.version>
-		        
-        <!-- Versao Swagger -->
         <swagger.version>2.8.0</swagger.version>
-		
-		<!-- Versao commons-lang3 -->
         <commons-lang3.version>3.4</commons-lang3.version>
-		
-		<!-- Versao do MapStruct -->
         <version-map-struct>1.2.0.Final</version-map-struct>
-		
-		<!-- Versao liquibase -->
         <liquibase.version>3.6.3</liquibase.version>
-
         <javassist.version>3.20.0-GA</javassist.version>
-
         <liquibase-maven-plugin.version>3.6.3</liquibase-maven-plugin.version>
         <liquibase-hibernate5.version>3.6</liquibase-hibernate5.version>
-
         <validation-api.version>1.1.0.Final</validation-api.version>
-
-        <spring-boot.version>2.1.4.RELEASE</spring-boot.version>      
-        
         <validation-api.version>2.0.1.Final</validation-api.version>
         <javassist.version>3.24.0-GA</javassist.version>
-        
-        <hibernate.version>5.4.1.Final</hibernate.version>  
-        
-        <spring-security-oauth2.version>2.2.1.RELEASE</spring-security-oauth2.version>
-		<spring-security-jwt.version>1.0.9.RELEASE</spring-security-jwt.version>
-
+        <hibernate.version>5.4.1.Final</hibernate.version>
         <profile.no-liquibase />
 	</properties>
-	
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Greenwich.SR2</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-		
+
+	<!-- DEPENDENCIA DO EUREKA -->
+<!-- 	<dependencyManagement> -->
+<!-- 		<dependencies> -->
+<!-- 			<dependency> -->
+<!-- 				<groupId>org.springframework.cloud</groupId> -->
+<!-- 				<artifactId>spring-cloud-dependencies</artifactId> -->
+<!-- 				<version>Greenwich.SR2</version> -->
+<!-- 				<type>pom</type> -->
+<!-- 				<scope>import</scope> -->
+<!-- 			</dependency> -->
+<!-- 		</dependencies> -->
+<!-- 	</dependencyManagement> -->
+
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -76,34 +59,36 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		<dependency>
-		    <groupId>org.springframework.cloud</groupId>
-		    <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
-		
+
+		<!-- NECESSARIO PARA O EUREKA -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.springframework.cloud</groupId> -->
+<!-- 		    <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId> -->
+<!-- 		</dependency> -->
+
+		<!-- NECESSARIO PARA O EUREKA -->
 		<!-- Cloud Config Client -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-client</artifactId>
-		</dependency>
-        
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.cloud</groupId> -->
+<!-- 			<artifactId>spring-cloud-config-client</artifactId> -->
+<!-- 		</dependency> -->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
+
 		<dependency>
 		    <groupId>org.hibernate</groupId>
 		    <artifactId>hibernate-jpamodelgen</artifactId>
 		</dependency>
-		
+
 		<!-- mysql -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -121,7 +106,7 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-envers</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -148,7 +133,7 @@
 		    <artifactId>mapstruct-jdk8</artifactId>
 		    <version>${version-map-struct}</version>
 		</dependency>
-		
+
 		<!-- DATASOURCE E POOL DE CONEXAO -->
         <dependency>
             <groupId>com.zaxxer</groupId>
@@ -186,31 +171,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
-		
-		<dependency>
-		    <groupId>org.springframework.cloud</groupId>
-		    <artifactId>spring-cloud-starter-oauth2</artifactId>
-		</dependency>
-		
-<!-- 		<dependency> -->
-<!--             <groupId>org.springframework.security.oauth</groupId> -->
-<!--             <artifactId>spring-security-oauth2</artifactId> -->
-<!--             <version>${spring-security-oauth2.version}</version> -->
-<!--         </dependency> -->
 
+		<!-- DEPENDENCIA DO OAUTH2 COM SPRING CLOUD -->
 <!-- 		<dependency> -->
-<!-- 		    <groupId>org.springframework.security</groupId> -->
-<!-- 		    <artifactId>spring-security-oauth2-client</artifactId> -->
+<!-- 		    <groupId>org.springframework.cloud</groupId> -->
+<!-- 		    <artifactId>spring-cloud-starter-oauth2</artifactId> -->
 <!-- 		</dependency> -->
-		
 
-<!--         <dependency> -->
-<!--             <groupId>org.springframework.security</groupId> -->
-<!--             <artifactId>spring-security-jwt</artifactId> -->
-<!--             <version>${spring-security-jwt.version}</version> -->
-<!--         </dependency> -->
-
-			
 	</dependencies>
 
 	<build>
@@ -223,7 +190,7 @@
 	        <plugin>
 	            <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-compiler-plugin</artifactId>
-	            
+
 	            <configuration>
 	                <source>1.8</source> <!-- or higher, depending on your project -->
 	                <target>1.8</target> <!-- or higher, depending on your project -->
@@ -236,8 +203,8 @@
 	                </annotationProcessorPaths>
 	            </configuration>
 	        </plugin>
-	        
-	        
+
+
 	        <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
@@ -290,9 +257,9 @@
 
                 </dependencies>
             </plugin>
-	        
-	        
-	        
+
+
+
 	    </plugins>
 	</build>
 
