--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,16 +22,16 @@ spring.datasource.hikari.pool-name=REGISTRY-CP
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/register?useSSL=false
 spring.datasource.username=root
-#spring.datasource.password=ENC($2a$10$u.Vd9Wf5gIvaZNKQ5y0gIOJeQ7paE/RpbV9Z8ZFVboft9t8622IOu)
 spring.datasource.password=JesusCristo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.default_schema=register
 spring.jpa.properties.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #=====================================================================================================================#
-#spring.jackson.deserialization.fail-on-unknown-properties=true
-#spring.jackson.deserialization.fail-on-ignored-properties=true
-#spring.mvc.throw-exception-if-no-handler-found=true
-#spring.resources.add-mappings=false
-#spring.messages.basename=i18n/messages
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.deserialization.fail-on-ignored-properties=true
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
+spring.messages.basename=i18n/messages
