--- a/src/main/resources/application-hml.properties
+++ b/src/main/resources/application-hml.properties
@@ -27,6 +27,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.default_schema=register
 spring.jpa.properties.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #=====================================================================================================================#
 spring.jackson.deserialization.fail-on-unknown-properties=true
