Configuração do projeto com exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
+app.version=@project.version@
 server.port=8082
 server.servlet.context-path=/register
 spring.application.name=register
 server.max-http-header-size=200000
 spring.mvc.dispatch-options-request=true
 spring.main.allow-bean-definition-overriding=true
+
+spring.messages.basename=i18n/messages
+
+logging.level.org.hibernate=info
+logging.level.org.springframework.web=info
+
+spring.jackson.date-format=dd/MM/yyyy HH:mm:ss
+spring.jackson.default-property-inclusion=NON_NULL
