--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>11</java.version>
         <swagger.version>2.9.2</swagger.version>
+		<springdoc.version>1.2.33</springdoc.version>
         <commons-lang3.version>3.4</commons-lang3.version>
         <spring-boot.version>2.4.1</spring-boot.version>
 		<org.mapstruct.version>1.4.1.Final</org.mapstruct.version>
@@ -108,6 +109,13 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>${swagger.version}</version>
 			<scope>compile</scope>
+		</dependency>
+
+		<!-- Spring Rest Docs OpenApi - Swagger UI -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>${springdoc.version}</version>
 		</dependency>
 
 		<dependency>
