--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -20,7 +20,7 @@ spring.datasource.hikari.idle-timeout=120000
 spring.datasource.hikari.max-lifetime=28800000
 spring.datasource.hikari.pool-name=REGISTRY-CP
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/register?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/register?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=JesusCristo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
