--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -35,3 +35,5 @@ spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 spring.messages.basename=i18n/messages
+
+cep.service.url=https://viacep.com.br/ws
